# salvo_cors_test

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/pages/: index.js
