[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version = "0.36", features=["extra"]}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0.143", features = ["derive"] }